# aruco

./: CMakeLists.txt  package.xml
src/: aruco.h  cvdrawingutils.h  markerdetector.h  markerlabeler.h  posetracker.h
tests/: CMakeLists.txt
