<?xml version="1.0"?>
<package>
  <name>aruco</name>
  <version>0.0.0</version>
  <description>A fixed version of aruco with catkin support</description>

  <maintainer email="lhofer@labri.fr">Ludovic Hofer</maintainer>
  <author email="rmsalinas@uco.es">Rafael Muñoz Salinas</author>

  <license>Custom</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend> <!-- rhobandeps/eigen -->

  <run_depend>eigen</run_depend>

  <export>
  </export>
</package>
